--- a/partials/resources.html
+++ b/partials/resources.html
@@ -7,5 +7,10 @@
         <li><a href="http://thesassway.com/" target="_blank">The SASS Way</a></li>
         <li><a href="http://leveluptuts.com/tutorials/sass-tutorials" target="_blank">SASS video tutorials</a></li>
         <li><a href="http://compass-style.org/" target="_blank">COMPASS Official Website</a></li>
+        <li><a href="http://leveluptuts.com/tutorials/compass-tutorials" target="_blank">COMPASS video tutorials</a></li>
     </ul>
+</div>
+
+<div class="button-area">
+    <button onclick="window.scrollTo(0, 0); $('.canvas').fadeIn(function () { loop(); });" class="btn btn-primary btn-lg" style="padding: 15px 40px;">END</button>
 </div>
