--- a/partials/why-sass.html
+++ b/partials/why-sass.html
@@ -1,6 +1,7 @@
 <h1 class="page-title">Why Sass?</h1>
 
 <div class="jumbotron">
+    <h2 style="padding-bottom: 20px;">Easier/faster workflow thanks to:</h2>
     <ul>
         <li><a ui-sref="style-nesting">Style nesting</a></li>
         <li><a ui-sref="variables">Variables</a></li>
