--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -40,27 +40,29 @@ body {
 /* line 41, ../sass/styles.scss */
 #canvas {
   background: url(../images/night_sky.jpg) no-repeat;
+  -webkit-background-size: cover cover;
+  background-size: cover;
 }
 
-/* line 46, ../sass/styles.scss */
+/* line 48, ../sass/styles.scss */
 header .logo {
   width: 250px;
   margin: 25px auto;
 }
 
-/* line 52, ../sass/styles.scss */
+/* line 54, ../sass/styles.scss */
 nav {
   position: fixed;
   top: 30%;
   right: 25px;
   z-index: 10;
 }
-/* line 58, ../sass/styles.scss */
+/* line 60, ../sass/styles.scss */
 nav ul li {
   list-style: none;
   margin-bottom: 10px;
 }
-/* line 62, ../sass/styles.scss */
+/* line 64, ../sass/styles.scss */
 nav ul li a {
   display: block;
   width: 18px;
@@ -78,13 +80,13 @@ nav ul li a {
   transition: all 0.35s ease;
   -webkit-transition: all 0.35s ease;
 }
-/* line 75, ../sass/styles.scss */
+/* line 77, ../sass/styles.scss */
 nav ul li a:hover {
   opacity: 1;
   transform: scale(1.2);
   -webkit-transform: scale(1.2);
 }
-/* line 81, ../sass/styles.scss */
+/* line 83, ../sass/styles.scss */
 nav ul li a.active {
   opacity: 1;
   background: #c6538c;
@@ -93,12 +95,12 @@ nav ul li a.active {
   box-shadow: inset -2px -2px 10px rgba(70, 70, 70, 0.4), 0px 0px 5px rgba(255, 255, 255, 0.2), inset 0px 0px 5px rgba(255, 255, 255, 0.2);
 }
 
-/* line 92, ../sass/styles.scss */
+/* line 94, ../sass/styles.scss */
 .tooltip {
   font-size: 22px;
 }
 
-/* line 96, ../sass/styles.scss */
+/* line 98, ../sass/styles.scss */
 h1.page-title {
   color: #808c99;
   font-size: 4.50em;
@@ -106,88 +108,88 @@ h1.page-title {
   text-align: center;
   padding: 40px 0 45px 0;
 }
-/* line 103, ../sass/styles.scss */
+/* line 105, ../sass/styles.scss */
 h1.page-title span {
   font-size: 0.33em;
 }
 
-/* line 108, ../sass/styles.scss */
+/* line 110, ../sass/styles.scss */
 .jumbotron {
   clear: both;
 }
-/* line 112, ../sass/styles.scss */
+/* line 114, ../sass/styles.scss */
 .jumbotron ul li,
 .jumbotron ol li {
   font-size: 2.00em;
   line-height: 130%;
   padding: 0 0 0.8em 0;
 }
-/* line 118, ../sass/styles.scss */
+/* line 120, ../sass/styles.scss */
 .jumbotron ul li span.purple,
 .jumbotron ol li span.purple {
   color: #c6538c;
 }
-/* line 121, ../sass/styles.scss */
+/* line 123, ../sass/styles.scss */
 .jumbotron pre {
   font-size: 20px;
 }
 
-/* line 126, ../sass/styles.scss */
+/* line 128, ../sass/styles.scss */
 .button-area {
   text-align: center;
   margin-bottom: 15px;
 }
 
-/* line 130, ../sass/styles.scss */
+/* line 132, ../sass/styles.scss */
 button {
   outline: none !important;
 }
-/* line 134, ../sass/styles.scss */
+/* line 136, ../sass/styles.scss */
 button:nth-child(2n+1), button:last-child {
   margin-right: 10px;
 }
 
-/* line 138, ../sass/styles.scss */
+/* line 140, ../sass/styles.scss */
 .btn-primary {
   background: #c6538c;
   border: none;
 }
-/* line 144, ../sass/styles.scss */
+/* line 146, ../sass/styles.scss */
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus {
   background: #c24785;
 }
 
-/* line 149, ../sass/styles.scss */
+/* line 151, ../sass/styles.scss */
 .edit {
   font-size: 1.33em;
 }
 
-/* line 153, ../sass/styles.scss */
+/* line 155, ../sass/styles.scss */
 span.highlight {
   color: #c6538c;
 }
 
-/* line 157, ../sass/styles.scss */
+/* line 159, ../sass/styles.scss */
 .modal-header h2 {
   color: #c6538c;
 }
 
-/* line 160, ../sass/styles.scss */
+/* line 162, ../sass/styles.scss */
 .modal p {
   font-size: 22px;
 }
 
-/* line 163, ../sass/styles.scss */
+/* line 165, ../sass/styles.scss */
 .modal pre {
   font-size: 20px;
 }
 
-/* line 166, ../sass/styles.scss */
+/* line 168, ../sass/styles.scss */
 .modal-footer {
   text-align: left;
 }
 
-/* line 171, ../sass/styles.scss */
+/* line 173, ../sass/styles.scss */
 .footer p {
   color: #666666;
 }
@@ -203,7 +205,7 @@ span.highlight {
     -ms-animation: fadeInDown 0.5s;
     animation: fadeInDown 0.5s;
 }*/
-/* line 189, ../sass/styles.scss */
+/* line 191, ../sass/styles.scss */
 #mainView.ng-enter {
   -webkit-animation: bounceInLeft 0.8s;
   -moz-animation: bounceInLeft 0.8s;
