Fix broken link

--- a/partials/resources.html
+++ b/partials/resources.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron">
     <ul>
-        <li><a href="Install Sass and Compass" target="_blank">Install SASS &amp; Compass</a></li>
+        <li><a href="http://thesassway.com/beginner/getting-started-with-sass-and-compass" target="_blank">Install SASS &amp; Compass</a></li>
         <li><a href="http://sass-lang.com/" target="_blank">SASS Official Website</a></li>
         <li><a href="http://thesassway.com/" target="_blank">The SASS Way</a></li>
         <li><a href="http://leveluptuts.com/tutorials/sass-tutorials" target="_blank">SASS video tutorials</a></li>
